Update swagger docs and remove api key update methods
