# application/static/swagger/swagger.json
@@ -1,4 +1,3 @@
-
 {
   "swagger": "2.0",
   "info": {
@@ -12,10 +11,10 @@
       "name": "notifications",
       "description": "Operations available for dispatching notifications via the GOV.UK Notify platform."
     },
-	{
-	  "name": "configuration",
-	  "description": "Operations available for configuring settings used by this API."
-	}
+    {
+      "name": "configuration",
+      "description": "Operations available for configuring settings used by this API."
+    }
   ],
   "paths": {
     "/notifications/email/": {
@@ -53,7 +52,7 @@
             "description": "Bad request"
           },
           "500": {
-             "description": "Server error"
+            "description": "Server error"
           }
         }
       }
@@ -93,47 +92,7 @@
             "description": "Bad request"
           },
           "500": {
-             "description": "Server error"
-          }
-        }
-      }
-    },
-    "/notifications/api-key/" : {
-      "put": {
-        "tags": [
-          "configuration"
-        ],
-        "summary": "Sets the GOV.UK Notify API key used by this service",
-        "operationId": "apiKey",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "in": "body",
-            "name": "UpdateApiKeyRequest",
-            "description": "GOV.UK Notify API key",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/UpdateApiKeyRequest"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "API Key updated",
-            "schema": {
-              "$ref": "#/definitions/ApiKeyUpdateResponse"
-            }
-          },
-          "400": {
-            "description": "Bad request"
-			},
-          "500": {
-             "description": "Server error"
+            "description": "Server error"
           }
         }
       }
@@ -147,6 +106,11 @@
         "templateId"
       ],
       "properties": {
+        "service_name": {
+          "type": "string",
+          "example": "Nannies",
+          "description": "Optional parameter used to set alternative GOV.UK Notify service endpoints"
+        },
         "email": {
           "type": "string",
           "example": "recipient@email.com"
@@ -175,6 +139,11 @@
         "templateId"
       ],
       "properties": {
+        "service_name": {
+          "type": "string",
+          "example": "Nannies",
+          "description": "Optional parameter used to set alternative GOV.UK Notify service endpoints"
+        },
         "phoneNumber": {
           "type": "string",
           "example": "07791619518"
@@ -186,7 +155,7 @@
         },
         "personalisation": {
           "type": "object",
-		  "example": {
+          "example": {
             "full name": "Ms Test Recipient"
           }
         },
@@ -196,43 +165,20 @@
         }
       }
     },
-    "UpdateApiKeyRequest": {
-      "type": "object",
-      "required": [
-        "apiKey"
-      ],
-      "properties": {
-        "apiKey": {
-          "type": "string",
-          "example": "dev_api-7c51af0f-8720-4315-8u67-b4f94d7531e0-df9b0c2e-6h50-4102-ae62-9a24cde656ce"
-        }
-      }
-    },
     "NotificationCreationResponse": {
       "type": "object",
       "required": [
         "notifyId",
-		"message"
-      ],
-      "properties": {
- 		"message": {
-		  "type": "string",
-		  "example": "Email sent successfully"
-		},
-        "notifyId": {
-          "type": "string",
-          "format": "uuid"
-        }
-      }
-    },
-    "ApiKeyUpdateResponse": {
-      "type": "object",
-      "required": [
         "message"
       ],
       "properties": {
         "message": {
-          "type": "string"
+          "type": "string",
+          "example": "Email sent successfully"
+        },
+        "notifyId": {
+          "type": "string",
+          "format": "uuid"
         }
       }
     }
